fix: align offramp link with build number

--- a/static/styles/rewards/pay.css
+++ b/static/styles/rewards/pay.css
@@ -196,7 +196,7 @@ footer {
 
 .faq-icon {
   position: fixed;
-  bottom: 20px;
+  bottom: 42px;
   right: 20px;
   cursor: pointer;
 }
